# advent_of_code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
advent_of_code/day_1/: d1_scripts.py
advent_of_code/day_2/: d2_scripts.py
advent_of_code/day_3/: d3.py
advent_of_code/day_4/: d4.py  file_io.py  grid.py
day_1/: d1_scripts.py  problem_1.py
day_2/: d2_scripts.py
day_3/: d3.py
tests/day_1/: test_day1.py
tests/day_2/: test_day2.py
tests/day_3/: test_day3.py
tests/day_4/: test_day4.py  test_io.py
