[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Morgan Lefranc <mlefranc@ridge-i.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pre-commit = "^2.16.0"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
omit = ["**/__init__.py", "tests/*"]
branch = true
